Uppdatera backend med förbättrad säkerhet, autentisering och uppgiftshantering
- Implementera rollbaserad åtkomstkontroll i SecurityConfig
- Förbättra JWT-tokenhantering med rollbaserade behörigheter
- Uppdatera TaskController och TaskService med mer flexibel filtrering
- Förenkla och förbättra autentiseringsflödet i AuthController
- Konvertera TaskStatus och TaskPriority till strängbaserade värden